<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_search_logcat"
        android:icon="@drawable/ic_baseline_manage_search_24"
        android:title="@string/search_menu_title"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />
    <item
        android:id="@+id/action_pause_logcat"
        android:icon="@drawable/ic_baseline_pause_24"
        android:title="@string/pause_logcat"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_send_logcat"
        android:icon="@drawable/baseline_send_24"
        android:title="@string/logcat"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_copy_logcat"
        android:icon="@drawable/ic_baseline_content_copy_24"
        android:title="@string/copy_all_logs"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_logcat_level"
        android:icon="@drawable/ic_baseline_filter_list_24"
        android:title="@string/log_level"
        app:showAsAction="never">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/action_log_level_panic" android:title="@string/log_level_panic" />
                <item android:id="@+id/action_log_level_fatal" android:title="@string/log_level_fatal" />
                <item android:id="@+id/action_log_level_error" android:title="@string/log_level_error" />
                <item android:id="@+id/action_log_level_warn" android:title="@string/log_level_warning" />
                <item android:id="@+id/action_log_level_info" android:title="@string/log_level_info" />
                <item android:id="@+id/action_log_level_debug" android:title="@string/log_level_debug" />
                <item android:id="@+id/action_log_level_trace" android:title="@string/log_level_trace" android:checked="true" />
            </group>
        </menu>
    </item>
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_baseline_refresh_24"
        android:title="@string/group_update"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_clear_logcat"
        android:icon="@drawable/baseline_delete_sweep_24"
        android:title="@string/clear_logcat"
        app:showAsAction="never" />
</menu>
